# netdecker

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  proxy.db  pyproject.toml  pytest.ini
netdecker/: __init__.py  config.py  db.py  deck.py  errors.py  main.py  models.py  utils.py
netdecker/cli/: __init__.py  cli.py  helpers.py  result.py
netdecker/cli/commands/: deck.py  proxy.py
netdecker/models/: __init__.py  card.py  decklist.py
netdecker/services/: __init__.py  allocation.py  card_inventory.py  decklist.py
netdecker/workflows/: __init__.py  deck_management.py
tests/: conftest.py  test_cli.py  test_cli_helpers.py  test_cli_result.py  test_deck_commands.py  test_errors.py  test_main.py  test_proxy_commands.py  test_services.py  test_utils.py  test_workflows.py
